--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 *.vtu
 *.pvd
 
+# Swap files
+*.swp
+
 # iPython / Jupyter notebooks
 *.ipynb
 __init__.py
@@ -24,4 +27,10 @@ __init__.py
 *.pdf
 *.dat
 *.txt
+
+# Particular Prelude file
+Prelude/Report/Prelude_Report-blx.bib
+
+# All of the FENICS_TEST directory
+FENICS_TEST/
 
