--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *.fls
 *.xml
 *.bcf
+*-blx.bib
 
 # Paraview files
 *.vtu
@@ -29,5 +30,5 @@ __init__.py
 *.txt
 
 # Particular Prelude file
-Prelude/Report/Prelude_Report-blx.bib
+#Prelude/Report/Prelude_Report-blx.bib
 
